# aeo-project

./: LICENSE
R/renv/: .gitignore
R/renv/data/: bfm.tif
R/renv/script/: 01_Example_BFAST.R  02_BFAST_Monitor.R  03_BFAST_Monitor.R
python/: .gitignore  pyproject.toml
python/src/: analysis.ipynb  get_landsat.ipynb  get_landsat_modis.ipynb
